FIX: Icon vertical align fixed

--- a/kit-src/css/iconfont.styl
+++ b/kit-src/css/iconfont.styl
@@ -17,6 +17,7 @@
   /* speak: none; only necessary if not using the private unicode range (firstGlyph option) */
   text-decoration: none
   text-transform: none
+  line-height: normal
 
 
 for glyph in $glyphs
